@@ -2,6 +2,10 @@ Revision history for Git-Background
 
 {{$NEXT}}
 
+  - The git used for the tests now always outputs UTF-8, as the real
+    Git does.
+  - Added a new test to test the UTF-8 handling.
+
 0.007  2023-08-05 12:30:25 UTC
 
   - use binmode($fh, ':encoding(UTF-8)') on the file handles before reading
